--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,13 @@
 [build]
 command = "pip install -r requirements.txt"
+publish = "public"
 
 [functions]
 directory = "netlify/functions"
+node_bundler = "esbuild"
 
 [[redirects]]
 from = "/python/*"
 to = "/.netlify/functions/app/:splat"
 status = 200
+force = true
